--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -2304,11 +2304,11 @@
           "collections_per_row": 3,
           "align_height": true,
           "collection_height": 240,
-          "button_style": "button--secondary",
+          "button_style": "button--link-style",
           "overlay_background": "#000000",
           "overlay_background_opacity": 40,
           "overlay_text": "#ffffff",
-          "collection_title_below_image": false,
+          "collection_title_below_image": true,
           "width": "standard",
           "show_gutter": true,
           "padding_top": 20,
@@ -2320,6 +2320,7 @@
       },
       "16087574862d8f058f": {
         "type": "index__blog-posts",
+        "disabled": true,
         "settings": {
           "title": "The latest",
           "blog_widget_select": "news",
