--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -389,18 +389,12 @@
               "menu_1_link": "shopify:\/\/collections\/treats"
             }
           },
-          "319d524b-3c7c-4acc-ae5b-7e5ae9bcc845": {
-            "type": "menu",
-            "settings": {
-              "menu_1": "best-sellers"
-            }
-          },
           "1565195799064": {
             "type": "featured_promo",
             "settings": {
               "image": "shopify:\/\/shop_images\/social-4.jpg",
               "richtext": "<p>Loved by pups of all sizes.<\/p>",
-              "bgr_color": "#dddbd2",
+              "bgr_color": "rgba(0,0,0,0)",
               "text_color": "#000000",
               "promo_link": "shopify:\/\/products\/pig-ear",
               "button_label": "Shop Pig Ear ➞",
@@ -411,7 +405,6 @@
         "block_order": [
           "mega-menu-1-0",
           "1565195971169",
-          "319d524b-3c7c-4acc-ae5b-7e5ae9bcc845",
           "1565195799064"
         ],
         "settings": {
@@ -421,7 +414,7 @@
           "mega_menu_text_color": "#404040",
           "show_mega_bottom_bar": true,
           "mega_bottom_bar_icon": "",
-          "mega_bottom_bar_text": "<b>See all products ➞<\/b>",
+          "mega_bottom_bar_text": "<b>Shop all products ➞<\/b>",
           "mega_bottom_bar_link": "shopify:\/\/collections",
           "size": "regular",
           "bottom_banner_bg": "#000000",
@@ -1618,8 +1611,7 @@
       "page-contact__banner": {
         "type": "page-contact__banner",
         "settings": {
-          "show_banner": true,
-          "image": "shopify:\/\/shop_images\/fresh__page--contact-us-banner-01.jpg",
+          "show_banner": false,
           "image_darken": false,
           "subtitle": "We love to hear from you!",
           "width": "wide",
@@ -1678,13 +1670,12 @@
           "page-contact__main-2"
         ],
         "settings": {
-          "content_image": "shopify:\/\/shop_images\/fresh__page--contact-us-01.jpg",
           "title": "Need to get in touch?",
-          "content_text": "<p>We're always happy to chat and help answer any questions you may have! Please note, we try our best to respond to all inquiries within 48 hours, Monday - Friday.<\/p>",
+          "content_text": "<p>We&#x27;re always happy to chat and help answer any questions you may have! Please note, we try our best to respond to all inquiries within 48 hours, Monday - Friday.<\/p>",
           "social_enable": true,
           "text_alignment": "left",
-          "background": "#000000",
-          "text_color": "#ffffff",
+          "background": "rgba(0,0,0,0)",
+          "text_color": "#000000",
           "form_position": "right",
           "width": "standard",
           "padding_top": 40,
@@ -1695,59 +1686,6 @@
       },
       "page-contact__sections": {
         "type": "page-contact__sections",
-        "blocks": {
-          "page-contact__sections-0": {
-            "type": "rich_text",
-            "settings": {
-              "title": "Come and visit",
-              "heading_font": "helvetica_n7",
-              "heading_color": "#ffffff",
-              "heading_alignment": "left",
-              "heading_size": 50,
-              "text": "<p>Stop by one of our locations!&nbsp;<\/p>\n<p>Mon-Fri: 9:00am - 6:00pm<br>Sat: 10:00am - 3:00pm<br>Sun: Closed<\/p>",
-              "text_font": "helvetica_n4",
-              "text_color": "#ffffff",
-              "text_alignment": "left",
-              "text_size": 16,
-              "columns": 1,
-              "button_label": "",
-              "button_link": "",
-              "button_alignment": "center",
-              "button_style": "button--primary",
-              "background": "#000000",
-              "gradient": "rgba(0,0,0,0)",
-              "gradient_rotation": 180,
-              "width": "half",
-              "padding_top": 0,
-              "padding_bottom": 0,
-              "padding_left": 0,
-              "padding_right": 0,
-              "animation": "none"
-            }
-          },
-          "page-contact__sections-1": {
-            "type": "map",
-            "settings": {
-              "map_address": "Bath, England",
-              "map_height": 400,
-              "zoom_level": 11,
-              "map_image": "",
-              "api_key": "",
-              "show_pin": false,
-              "map_style": "silver",
-              "width": "half",
-              "padding_top": 0,
-              "padding_bottom": 0,
-              "padding_left": 0,
-              "padding_right": 0,
-              "animation": "none"
-            }
-          }
-        },
-        "block_order": [
-          "page-contact__sections-0",
-          "page-contact__sections-1"
-        ],
         "settings": {
         }
       },
@@ -2204,7 +2142,7 @@
           "image": "shopify:\/\/shop_images\/dog-field-right.jpg",
           "pretext": "",
           "title": "Feed them like family.",
-          "subtitle": "<p>Give your best friend the quality they deserve.<\/p>",
+          "subtitle": "",
           "pretext_color": "#ebeae4",
           "heading_color": "#ebeae4",
           "subheading_color": "#ebeae4",
@@ -2445,7 +2383,7 @@
             "type": "product",
             "settings": {
               "image": "shopify:\/\/shop_images\/social-2_97511094-73fb-4517-b09f-d074cd244669.jpg",
-              "featured_product": "6-inch-braided-bully-stick",
+              "featured_product": "6-inch-natural-bully-stick",
               "rating": 5,
               "title": "Cooper",
               "description": "Enjoying my @jacks_premium bone I got from the @dallasfarmersmarket today!! It’s so good, thanks mom and dad!!",
@@ -2478,7 +2416,7 @@
             "type": "product",
             "settings": {
               "image": "shopify:\/\/shop_images\/social-3.jpg",
-              "featured_product": "12-inch-bully-stick-bull",
+              "featured_product": "12-inch-natural-bully-stick",
               "rating": 1,
               "title": "Auggie",
               "description": "Do I smell... SHNACKS??? Nothing better than a @jacks_premium Friday delivery!",
