--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -178,9 +178,9 @@
     "collection_swatches_shape": "square",
     "enable_shopify_review_comments": false,
     "enable_shopify_collection_badges": false,
-    "display_product_quantity": false,
+    "display_product_quantity": true,
     "limit_quantity": false,
-    "display_inventory_left": false,
+    "display_inventory_left": true,
     "inventory_threshold": 10,
     "free_price_text": "Free",
     "product_form_style": "dropdown",
@@ -415,7 +415,7 @@
           "show_mega_bottom_bar": true,
           "mega_bottom_bar_icon": "",
           "mega_bottom_bar_text": "<b>Shop all products ➞<\/b>",
-          "mega_bottom_bar_link": "shopify:\/\/collections",
+          "mega_bottom_bar_link": "shopify:\/\/collections\/shop-all",
           "size": "regular",
           "bottom_banner_bg": "#000000",
           "bottom_banner_text": "#efefef",
@@ -497,7 +497,7 @@
           "footer-classic-1": {
             "type": "link_list",
             "settings": {
-              "menu": "main-menu",
+              "menu": "shop-all",
               "social_icons_footer": false
             }
           },
@@ -1428,10 +1428,9 @@
           "page-details__main-0": {
             "type": "image_with_overlay",
             "settings": {
-              "image": "shopify:\/\/shop_images\/fresh__page--our-story-banner-01.jpg",
-              "link": "",
+              "image": "shopify:\/\/shop_images\/two-dogs.jpg",
               "pretext": "",
-              "title": "Our Story",
+              "title": "Rewards",
               "subtitle": "",
               "pretext_color": "#000000",
               "heading_color": "#ffffff",
@@ -1445,10 +1444,8 @@
               "border_width": 0,
               "text_width": 40,
               "button_1": "",
-              "button_1_link": "",
               "button_1_style": "button--secondary",
               "button_2": "",
-              "button_2_link": "",
               "button_2_style": "button--secondary",
               "mobile_image_crop": "none",
               "mobile_text_below_image": false,
@@ -1466,19 +1463,18 @@
           "page-details__main-2": {
             "type": "rich_text",
             "settings": {
-              "title": "Our Values",
+              "title": "Earn 5 Pack Points for every $1 spent",
               "heading_font": "helvetica_n7",
               "heading_color": "rgba(0,0,0,0)",
               "heading_alignment": "left",
               "heading_size": 30,
-              "text": "<p>Our top priority is the environment. As a company that manufactures and produces products, and as consumers ourselves, we really need to focus on making the least amount of impact&nbsp;we have on the earth.&nbsp;<\/p>\n<p>We have been pushing our sustainability efforts forward as we focus on ethical production practices and introducing 100% compostable packaging.&nbsp;Our products and shipping packaging is already recyclable, but we're looking forward to see how we can improve our methods and even push ourselves further to take care of our planet!<\/p>",
+              "text": "",
               "text_font": "helvetica_n4",
               "text_color": "rgba(0,0,0,0)",
               "text_alignment": "left",
               "text_size": 14,
               "columns": 1,
               "button_label": "",
-              "button_link": "",
               "button_alignment": "center",
               "button_style": "button--primary",
               "background": "rgba(0,0,0,0)",
@@ -1495,19 +1491,18 @@
           "1564166889018": {
             "type": "rich_text",
             "settings": {
-              "title": "Our Products",
+              "title": "50 Pack Points = $1 off your order",
               "heading_font": "helvetica_n7",
               "heading_color": "rgba(0,0,0,0)",
               "heading_alignment": "left",
               "heading_size": 30,
-              "text": "<p>Our products are freshly made with natural and ethically sourced ingredients &ndash; <em>always<\/em>. This is of the utmost importance to us.&nbsp;Our products are handmade by our team locally and always go through quality testing before getting shipped out to you!<\/p>\n<p><\/p>\n<p>We love our loyal customers and are always open to discuss natural products and ingredients with anyone looking to make the switch for their bath + beauty products! Please reach out and <a href=\"\/pages\/contact-us\" title=\"Contact Us\">get in touch<\/a>&nbsp;with us if you'd like to chat or have any questions about our values + products.<\/p>",
+              "text": "",
               "text_font": "helvetica_n4",
               "text_color": "rgba(0,0,0,0)",
               "text_alignment": "left",
               "text_size": 14,
               "columns": 1,
               "button_label": "",
-              "button_link": "",
               "button_alignment": "center",
               "button_style": "button--primary",
               "background": "rgba(0,0,0,0)",
@@ -1521,77 +1516,88 @@
               "animation": "fadeInRight"
             }
           },
-          "page-details__main-1": {
-            "type": "featured_collection",
+          "8549dc68-420c-4826-87cf-e44ae031c84e": {
+            "type": "rich_text",
             "settings": {
-              "title": "Most loved",
-              "collection": "shampoos",
-              "products_per": 6,
-              "mobile_products_per_row": "1",
-              "products_limit": 6,
-              "align_height": false,
-              "collection_height": 200,
-              "collection_style": "grid",
+              "title": "Sign up",
+              "heading_font": "open_sans_n4",
+              "heading_color": "rgba(0,0,0,0)",
+              "heading_alignment": "left",
+              "heading_size": 30,
+              "text": "<p>Sign up for a free account today to start earning rewards.<\/p>",
+              "text_font": "open_sans_n4",
+              "text_color": "rgba(0,0,0,0)",
+              "text_alignment": "left",
+              "text_size": 20,
+              "columns": 1,
+              "button_label": "",
+              "button_alignment": "center",
+              "button_style": "button--primary",
+              "background": "rgba(0,0,0,0)",
+              "gradient": "rgba(0,0,0,0)",
+              "gradient_rotation": 180,
               "width": "wide",
-              "show_gutter": true,
               "padding_top": 20,
-              "padding_bottom": 20,
-              "animation": "none"
-            }
-          },
-          "1564167168369": {
-            "type": "image_with_overlay",
-            "settings": {
-              "image": "shopify:\/\/shop_images\/fresh__page--our-story-01.jpg",
-              "link": "",
-              "pretext": "",
-              "title": "Connect with our community",
-              "subtitle": "<p>Tons of resources and tips!<\/p>",
-              "pretext_color": "#000000",
-              "heading_color": "#ffffff",
-              "subheading_color": "#ffffff",
-              "text_alignment": "center",
-              "text_horizontal_position": "center",
-              "text_vertical_position": "middle",
-              "background_color": "#ffffff",
-              "background_opacity": 0,
-              "border_color": "#ffffff",
-              "border_width": 0,
-              "text_width": 50,
-              "button_1": "Visit the blog",
-              "button_1_link": "shopify:\/\/blogs\/news",
-              "button_1_style": "button--secondary",
-              "button_2": "",
-              "button_2_link": "",
-              "button_2_style": "button--secondary",
-              "mobile_image_crop": "none",
-              "mobile_text_below_image": true,
-              "pretext_color_mobile": "#000000",
-              "heading_color_mobile": "#000000",
-              "subheading_color_mobile": "#000000",
-              "width": "wide",
-              "padding_top": 0,
               "padding_bottom": 0,
               "padding_left": 0,
               "padding_right": 0,
-              "animation": "fadeIn"
+              "animation": "none"
             }
           },
-          "1594383671973": {
-            "type": "contact_form",
+          "a7c78d5e-80b3-4ede-ae42-0861ddededce": {
+            "type": "rich_text",
             "settings": {
-              "content_image": "",
-              "title": "Looking to get in touch?",
-              "content_text": "<p>We're always happy to chat and help answer any questions you may have! <br><br>Please note, we try our best to respond to all inquiries within 48 hours, Monday - Friday.&nbsp;<\/p>",
-              "social_enable": true,
+              "title": "Start earning",
+              "heading_font": "open_sans_n4",
+              "heading_color": "rgba(0,0,0,0)",
+              "heading_alignment": "left",
+              "heading_size": 30,
+              "text": "<p>Earn 5 Pack Points for every $1 you spend at gosun.co and even more for sharing on social media.<\/p>",
+              "text_font": "open_sans_n4",
+              "text_color": "rgba(0,0,0,0)",
               "text_alignment": "left",
-              "background": "#000000",
-              "text_color": "#ffffff",
-              "form_position": "right",
-              "width": "standard",
-              "padding_top": 40,
-              "padding_bottom": 40,
-              "animation": "fadeIn"
+              "text_size": 20,
+              "columns": 1,
+              "button_label": "",
+              "button_alignment": "center",
+              "button_style": "button--primary",
+              "background": "rgba(0,0,0,0)",
+              "gradient": "rgba(0,0,0,0)",
+              "gradient_rotation": 180,
+              "width": "wide",
+              "padding_top": 20,
+              "padding_bottom": 0,
+              "padding_left": 0,
+              "padding_right": 0,
+              "animation": "none"
+            }
+          },
+          "54065417-28ea-4fe1-8738-377d83ab7da2": {
+            "type": "rich_text",
+            "settings": {
+              "title": "Unlock rewards",
+              "heading_font": "open_sans_n4",
+              "heading_color": "rgba(0,0,0,0)",
+              "heading_alignment": "left",
+              "heading_size": 30,
+              "text": "<p>Redeem your Shine Points to earn to unlock discounts at checkout and exclusive gear.<\/p>",
+              "text_font": "open_sans_n4",
+              "text_color": "rgba(0,0,0,0)",
+              "text_alignment": "left",
+              "text_size": 20,
+              "columns": 2,
+              "button_label": "",
+              "button_alignment": "center",
+              "button_style": "button--primary",
+              "background": "rgba(0,0,0,0)",
+              "gradient": "rgba(0,0,0,0)",
+              "gradient_rotation": 180,
+              "width": "wide",
+              "padding_top": 20,
+              "padding_bottom": 21,
+              "padding_left": 0,
+              "padding_right": 0,
+              "animation": "none"
             }
           }
         },
@@ -1599,9 +1605,9 @@
           "page-details__main-0",
           "page-details__main-2",
           "1564166889018",
-          "page-details__main-1",
-          "1564167168369",
-          "1594383671973"
+          "8549dc68-420c-4826-87cf-e44ae031c84e",
+          "a7c78d5e-80b3-4ede-ae42-0861ddededce",
+          "54065417-28ea-4fe1-8738-377d83ab7da2"
         ],
         "settings": {
           "css_class": "",
@@ -1844,6 +1850,7 @@
         "type": "collection-subcollection__main",
         "settings": {
           "collection_breadcrumb": true,
+          "show_collection_products": false,
           "collection_tags": true,
           "collection_sort": true,
           "show_promo_banner": false,
@@ -1853,14 +1860,14 @@
           "banner_height": "medium",
           "collections_per_row": 3,
           "mobile_collections_per_row": "1",
-          "align_height": false,
-          "collection_height": 400,
+          "align_height": true,
+          "collection_height": 250,
           "button_style": "button--primary",
           "overlay_background": "#d3d3d3",
           "overlay_background_opacity": 0,
           "overlay_text": "#000000",
           "collection_title_below_image": true,
-          "products_per_row": 3,
+          "products_per_row": 2,
           "mobile_products_per_row": "1",
           "align_thumbnail_height": false,
           "thumbnail_height": 200,
@@ -2155,7 +2162,7 @@
           "border_width": 0,
           "text_width": 40,
           "button_1": "Shop now ➞",
-          "button_1_link": "shopify:\/\/collections\/food",
+          "button_1_link": "shopify:\/\/collections\/shop-all",
           "button_1_style": "button--primary",
           "button_2": "",
           "button_2_style": "button--secondary",
