Fixed product form layout

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -121,8 +121,8 @@
     "banner_sale": "#88ad44",
     "banner_staffpick": "#000000",
     "qty_icon_color": "#000000",
-    "qty_icon_hover_color": "#000000",
-    "qty_background_color": "#ffffff",
+    "qty_icon_hover_color": "#262626",
+    "qty_background_color": "rgba(0,0,0,0)",
     "qty_background_hover_color": "#ffffff",
     "regular__font": "helvetica_n4",
     "regular_font_size": 16,
@@ -180,7 +180,7 @@
     "enable_shopify_collection_badges": false,
     "display_product_quantity": true,
     "limit_quantity": false,
-    "display_inventory_left": true,
+    "display_inventory_left": false,
     "inventory_threshold": 10,
     "free_price_text": "Free",
     "product_form_style": "dropdown",
